--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hanyu Wang"
-  avatar           : "profile.png"
+  avatar           : "zhangyuge.jpg"
   bio              : "USTCer, Lakers fan"
   location         : "Hefei, Anhui, P.R.CHINA"
   employer         :
