--- a/_config.yml
+++ b/_config.yml
@@ -97,12 +97,12 @@ author:
   facebook         :
   foursquare       :
   github           : "wwwhy725"
+  linkedin         : "https://www.linkedin.com/in/wwwhy/"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  LinkedIn         : "https://www.linkedin.com/in/wwwhy/"
   # orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
