--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   facebook         :
   foursquare       :
   github           : "wwwhy725"
-  linkedin         : "https://www.linkedin.com/in/wwwhy/"
+  linkedin         : "wwwhy"
   google_plus      :
   keybase          :
   instagram        :
