--- a/_config.yml
+++ b/_config.yml
@@ -83,10 +83,10 @@ author:
   name             : "Hanyu Wang"
   avatar           : "zhangyuge.jpg"
   bio              : "USTC->PSU, Lakers fan"
-  location         : "Hefei, Anhui, P.R.CHINA"
+  location         : "State College, PA, USA"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  # googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.com/citations?user=ubb3IBoAAAAJ&hl=en"
   email            : "hbw5365@psu.edu"
   # researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
