--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hanyu Wang"
   avatar           : "zhangyuge.jpg"
-  bio              : #"USTC->PSU, Lakers fan"
+  bio              : "PhD Student @ Penn State | Trustworthy AI"
   location         : "State College"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
